Fix label alignment: left on desktop, right only on mobile

--- a/static/admin.css
+++ b/static/admin.css
@@ -545,6 +545,7 @@ select {
 .action-item > label {
     grid-column: 1;
     text-align: left;
+    justify-self: start;
 }
 
 .action-item input[type="text"],
